# pillow-netpbm

./: .pre-commit-config.yaml  Dockerfile.test  Makefile  README.md  compuserve-rle.magic.mgc  pyproject.toml
.github/workflows/: release.yml  unit-tests.yml
interleaf_samples/: FANEUALL.IMG  test_mono_16x16.img  test_ramp_8x8.img  test_red_4x4.img
scripts/: test.sh
src/pillow_netpbm/: __init__.py  anytopnm.py  bridge.py  format.py  pam.py  registry.py
tests/: README.md  test_anytopnm.py  test_bridge.py  test_pam.py
tests/data/atari-degas/: AMMO.PC1  HIDDEN.PI3  MOUSE.PI1  titlepic.neo
tests/data/atk-raster/: andrew.magic
tests/data/autocad-slide/: AUTODIM.SLD  BACKINGR.SLD  DWL-S.sld  FIELD.SLD  FIN2.SLD  FIN3.SLD  NUT-Z.sld  PPC.SLD  REGSCRN1.SLD  S6.SLD  SHAFTBRK.SLD  SSN-Z.sld  ZOOMS.SLD  ab30-02c.sld  autocad-slide.magic
tests/data/avs/: poo.avs
tests/data/cmu-wm/: test.cmuwm
tests/data/compuserve-rle/: compuserve-rle.magic  test.cis
tests/data/facesaver/: facesaver.magic  max.fs  test.fs
tests/data/fiasco/: README.md  abydos.fco  fiasco.magic  test.wfa
tests/data/fits/: M57.FIT  MOON.FTS  test.fits
tests/data/garmin-srf/: test.srf
tests/data/gem-raster/: gem-neochrome-degas.patch  gem-raster.magic  test.gem
tests/data/group3-fax/: TESTDOC.G3  test.g3
tests/data/hp-paintjet/: test.pj
tests/data/interleaf/: abydos.iimg  interleaf.magic  test.leaf
tests/data/jbig/: jbig.magic  test.jbig
tests/data/lisp-machine/: abydos.lispm  test.lispm
tests/data/macpaint/: macpaint.magic  test.macp
tests/data/mavica-411/: MVC-023F.411
(+33 files in other folders)
